--- a/ej1.html
+++ b/ej1.html
@@ -15,6 +15,37 @@
         mediante el anidamiento de etiquetas. Además<br>vamos a mostrar 
         el uso de <sub>subindices</sub> y de <sup>superindices</sup>, así como 
         <strong>texto resaltado, que no es negrita</strong></p>
+
+        <ol>
+            <li>Primer elemento</li>
+            <li>Segundo elemento</li>
+            <li>Tercer elemento</li>
+        </ol>
+        <ol type="I">
+            <li>Primer elemento</li>
+            <li>Segundo elemento</li>
+            <li>Tercer elemento</li>
+        </ol>
+        <ol start="6">
+            <li>Primer elemento</li>
+            <li>Segundo elemento</li>
+            <li>Tercer elemento</li>
+        </ol>
+        <ul type="circle">
+            <li>Primer elemento</li>
+            <li>Segundo elemento</li>
+            <li>Tercer elemento</li>
+        </ul>
+        <ul type="square">
+            <li>Primer elemento</li>
+            <li>Segundo elemento</li>
+            <li>Tercer elemento</li>
+        </ul>
+        <ul>
+            <li>Primer elemento</li>
+            <li>Segundo elemento</li>
+            <li>Tercer elemento</li>
+        </ul>
     </body>
 </html>
 
