--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body> 
     <h1 id="demo" onclick="myFunction()">Hola Mundo</h1>
     <p>Tu nombre</p>
-    <a href="ej1.html">Ejemplo 1</a>
+    <a href="ejemplos.html">Ejemplo 1</a>
 
 
     <script>
