--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <body> 
     <h1 id="demo" onclick="myFunction()">Hola Mundo</h1>
     <p>Tu nombre</p>
-    <a href="ejemplos.html">Ejemplo 1</a>
+    <a href="ejemplos.html" style="color: red;">Ejemplos</a>
+    <a href="marcadores.html" style="color: rgb(10, 223, 81);">Marcadores</a>
 
 
     <script>
