--- a/index.html
+++ b/index.html
@@ -1,49 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Miguel Rodriguez</title>
-    <meta name="description" content="Mi primera página web!!">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="author" content="yo">
-    <style>
-      body{
-        background-color: powderblue;
-      }
-      h1{
-        color: red;
-      }
-      p{
-        color: blue;
-      }
-    </style>
-  </head>
-  <body> 
-    <h1 id="demo" onclick="myFunction()">Hola Mundo</h1>
-    <p>Tu nombre</p>
-    <a href="ejemplos.html" style="color: red;">Ejemplos</a>
-    <a href="marcadores.html" style="color: rgb(10, 223, 81);">Marcadores</a>
-
-
-    <script>
-      function myFunction(){
-        let x = 0;
-        let elem =  document.getElementById("demo");
-        if(x==0){
-       elem.innerHTML = "Hello JavaScript!";
-          x=1;
-        }else
-        {
-        elem.innerHTML = "Hola Mundo";
-        x=0;
-      }
-      }
-    </script>
-  </body>
-
-
-  
+    <head>
+        <title>Miguel Rodríguez</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        
+        <h1>Ejercicios HTML</h1>
+        <h4>Miguel Rodríguez</h4>
+        <a href="web/about.html">Sobre mí</a>
+    </body>
 </html>
-
-
-
-
