--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         
         <h1>Ejercicios HTML</h1>
         <h4>Miguel Rodríguez</h4>
-        <a href="web/about.html">Sobre mí</a>
+        <a href="web/about.html">Sobre mí</a><br>
+        <a href="web/tabla.html">Tabla</a>
     </body>
 </html>
