--- a/web/about.html
+++ b/web/about.html
@@ -4,7 +4,7 @@
         <title>Sobre mí</title>
         <meta charset="utf-8">
     </head>
-    <body style="text-align: center; background-color: aqua;">
+    <body style="background-color: aqua;">
         <h1>Sobre mí</h1>
         <p>
             Mi nombre es Miguel Rodríguez Reina. Estoy en el ciclo de DAM porque siempre <br>
@@ -15,6 +15,12 @@
             De momento tengo opiniones enfrentadas sobre el grado,<br>
             puesto que algunas asignaturas me resultan mucho más toscas que otras.
         </p>
-        <img src="/img/143.png" alt="" width="200" height="200">
+        <img src="/img/143.png" alt="yo" width="200" height="200">
+        <h5>Mis gustos:</h5>
+        <ol>
+            <li>Videojuegos</li>
+            <li>Motos</li>
+            <li>Tecnología</li>
+        </ol>
     </body>
 </html>
