--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>Ejercicios HTML</h1>
         <h4>Miguel Rodríguez</h4>
         <a href="web/about.html">Sobre mí</a><br>
-        <a href="web/tabla.html">Tabla</a>
+        <a href="web/tabla.html">Tabla</a><br>
+        <a href="web/ejercicio1.html">Ejercicio 1</a><br>
     </body>
 </html>
