--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     </head>
     <body>
         
-        <h1>Ejercicios HTML</h1>
-        <h4>Miguel Rodríguez</h4>
-        <a href="web/about.html">Sobre mí</a><br>
-        <a href="web/tabla.html">Tabla</a><br>
-        <a href="web/ejercicio1.html">Ejercicio 1</a><br>
+        <h1>Ejercicios de clase</h1>
+        <h2>Miguel Rodríguez</h2>
+
+        <ul>
+        <li><a href="web/about.html">Sobre mí</a></li>
+        <li><a href="web/tabla.html">Tabla</a></li>
+        <li><a href="web/ejercicio1.html">Ejercicio 1</a></li>
+        <li><a href="web/contacto.html">Contacto</a></li>
+        <li><a href="web/mapa.html">Mapa</a></li>
+        </ul>
+        
     </body>
 </html>
