--- a/web/about.html
+++ b/web/about.html
@@ -22,5 +22,6 @@
             <li>Motos</li>
             <li>Tecnología</li>
         </ol>
+        <a href="/index.html">Página principal</a>
     </body>
 </html>
