--- a/web/ejercicio1.html
+++ b/web/ejercicio1.html
@@ -32,5 +32,6 @@
                 </tr>
             </tbody>
         </table>
+        <a href="/index.html">Página principal</a>
 </body>
 </html>
