--- a/web/tabla.html
+++ b/web/tabla.html
@@ -16,5 +16,6 @@
                 <td><img src="/img/tenis.jpg" alt="tenis" height="250"></td>
             </tr>
         </table>
+        <a href="/index.html">Página principal</a>
     </body>
 </html>
