--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
         <title>Miguel Rodríguez</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
     </head>
     <body>
@@ -15,6 +16,7 @@
         <li><a href="web/ejercicio1.html">Ejercicio 1</a></li>
         <li><a href="web/contacto.html">Contacto</a></li>
         <li><a href="web/mapa.html">Mapa</a></li>
+        <li><a href="web/pagina3.html">Página 3</a></li>
         </ul>
         
     </body>
