--- a/web/pagina3.html
+++ b/web/pagina3.html
@@ -6,8 +6,8 @@
     <title>Página 3</title>
 </head>
 <body>
-   <iframe width="853" height="480" src="https://www.youtube.com/embed/WIRK_pGdIdA?list=RDWIRK_pGdIdA" title="chip" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+    <video src="/video/videoplayback.mp4" controls autoplay>a</video><br>   
+    <audio src="/audio/684300.mp3" controls>a</audio>
     <a href="/index.html">Página principal</a>
 </body>
 </html>
