--- a/web/contacto.html
+++ b/web/contacto.html
@@ -6,11 +6,11 @@
     <title>Contacto</title>
 </head>
 <body>
-    <form action="https://lm.ciclo.iesnervion.es/form3/envio.php" method="POST">
-        <input type="text" name="name" id="name" placeholder="Nombre"><br><br>
-        <input type="email" name="email" id="email" placeholder="Correo electrónico"><br><br>
+    <form action="https://lm.ciclo.iesnervion.es/form3/envio.php" method="POST" enctype="multipart/form-data">
+        <input type="text" name="nombre" id="name" placeholder="Nombre"><br><br>
+        <input type="email" name="correo" id="email" placeholder="Correo electrónico"><br><br>
         <textarea name="mensaje" id="mensaje" placeholder="Mensaje" rows="4" cols="30"></textarea><br><br>
-        <input type="image" name="imagen" id="imagen"><br><br>
+        <input type="file" name="imagen" id="imagen"><br><br>
         <button>Enviar</button>
     </form>
     <a href="/index.html">Página principal</a>
