--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="web/contacto.html">Contacto</a></li>
         <li><a href="web/mapa.html">Mapa</a></li>
         <li><a href="web/pagina3.html">Página 3</a></li>
+        <li><a href="CodeFest/index.html">CodeFest</a></li>
         </ul>
         
     </body>
