--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
         <title>Miguel Rodríguez</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
     </head>
     <body>
         
-        <h1>Ejercicios HTML</h1>
-        <h4>Miguel Rodríguez</h4>
-        <a href="web/about.html">Sobre mí</a><br>
-        <a href="web/tabla.html">Tabla</a>
+        <h1>Ejercicios de clase</h1>
+        <h2>Miguel Rodríguez</h2>
+
+        <ul>
+        <li><a href="web/about.html">Sobre mí</a></li>
+        <li><a href="web/tabla.html">Tabla</a></li>
+        <li><a href="web/ejercicio1.html">Ejercicio 1</a></li>
+        <li><a href="web/contacto.html">Contacto</a></li>
+        <li><a href="web/mapa.html">Mapa</a></li>
+        <li><a href="web/pagina3.html">Página 3</a></li>
+        <li><a href="CodeFest/index.html">CodeFest</a></li>
+        </ul>
+        
     </body>
 </html>
