--- a/CodeFest/web/localizacion.html
+++ b/CodeFest/web/localizacion.html
@@ -13,7 +13,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="/index.html">Página principal</a></li>
+            <li><a href="../index.html">Página principal</a></li>
             <li><a href="cartel.html">Cartel</a></li>
             <li><a href="localizacion.html">Localización</a></li>
             <li><a href="entradas.html">Entradas</a></li>
