--- a/CodeFest/index.html
+++ b/CodeFest/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<<<<<<< HEAD
+
     <link rel="stylesheet" href="css/estilos.css">
-=======
->>>>>>> 0a306ac80eb1c6492aaffedf42b351b03015a868
 </head>
 <body>
     <header>
@@ -27,18 +25,13 @@
         <section>
             <h3>¡No te lo pierdas!</h3>
         </section>
-<<<<<<< HEAD
+
         <p>¡El mayor festival de código de la región!</p>
         <img src="img/fest.jpg" alt="Festival" height="200">
 
     </main>
     <footer>
         <p>© 2025 CodeFest. Todos los derechos reservados.</p>
-=======
-    </main>
-    <footer>
-
->>>>>>> 0a306ac80eb1c6492aaffedf42b351b03015a868
     </footer>
 </body>
 </html>
