--- a/CodeFest/index.html
+++ b/CodeFest/index.html
@@ -27,7 +27,7 @@
         </section>
 
         <p>¡El mayor festival de código de la región!</p>
-        <img src="img/fest.jpg" alt="Festival" height="200">
+        <img src="img/fest.jpg" alt="Festival">
 
     </main>
     <footer>
