--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="web/mapa.html">Mapa</a></li>
         <li><a href="web/pagina3.html">Página 3</a></li>
         <li><a href="CodeFest/index.html">CodeFest</a></li>
+        <li><a href="ejercicios_css/index.html">CSS</a></li>
         </ul>
         
     </body>
